manifests/test-nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: test-nginx
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
